adding banner photo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </header>
 
                 <article>
-                    <div class="photo-banner"></div>
+                    <div><img id="banner-photo" src="assets/BANNERu.png"></div>
                 </article>
             </section>
             <hr>
@@ -160,6 +160,7 @@
         <footer>
             <p>Faishal Danni 2024</p>
             <p>Thank you for visiting</p>
+            <p><a href="https://www.freepik.com/free-vector/flat-futuristic-cyber-monday-horizontal-banners-set_18953385.htm#query=website%20banner&position=0&from_view=keyword&track=ais_user&uuid=71102f8d-94b0-4794-8bc7-4e30d7fcafc3">Image by pikisuperstar</a> on Freepik</p>
         </footer>
 
         <script src="js/script.js"></script>
