Revisi beberapa isi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div><a href="#home">Home</a></div>
                 <div><a href="#my-profile">My Profile</a></div>
                 <div><a href="#portfolio">Portfolio</a></div>
-                <div><a href="#message-us">Message Me</a></div>
+                <div><a href="#contact-me">Contact Me</a></div>
             </nav>
         </header>
         <hr>
@@ -35,8 +35,6 @@
                     <img class="banner-photo" src="assets/artur-aldyrkhanov-u159a2eL6UE-unsplash.jpg" alt="Banner Slides 1">
                     <img class="banner-photo" src="assets/artem-maltsev-vgQFlPq8tVQ-unsplash.jpg" alt="Banner Slides 2">
                     <img class="banner-photo" src="assets/vishnu-mohanan-vE6WEdZA6Vg-unsplash.jpg" alt="Banner Slides 3">
-                    <button type="button" onclick="plusDivs(-1)">Previous</button>
-                    <button type="button" onclick="plusDivs(1)">Next</button>
                 </article>
             </section>
             <hr>
@@ -54,7 +52,7 @@
                             <p>Nama : Faishal Danni</p>
                             <p>Tanggal Lahir : 24 Februari 2007</p>
                             <p>Jenis Kelamin : Laki-Laki</p>
-                            <p>Pekerjaan : Mahasiswa</p>
+                            <p>Pekerjaan : Mahasiswa UNTIRTA</p>
                             <p>Skill : Problem Solving</p>
                         </div>
                     </div>
@@ -79,9 +77,9 @@
             <hr>
 
             <!--Ini bagian message us-->
-            <section id="message-us">
+            <section id="contact-me">
                 <header>
-                    <h2>Message me</h2>
+                    <h2>Contact me!</h2>
                 </header>               
                 <article class="lastsection">
                     <!--Ini adalah bagian form untuk mengirim pesan-->
